--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -6,7 +6,10 @@
     <title>Campgrounds</title>
   </head>
   <body>
-    <h1>all campgrounds</h1>
+    <h1>All campgrounds</h1>
+    <div>
+      <a href="/campgrounds/new">Add Campground</a>
+    </div>
     <ul>
       <% for(let campground of campgrounds){ %>
       <li><a href="/campgrounds/<%= campground._id %>"><%= campground.title %></a></li>
