--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -8,5 +8,8 @@
   <body>
     <h1><%= campground.title %></h1>
     <h1><%= campground.location %></h1>
+    <footer>
+      <a href="/campgrounds">All Campgrounds</a>
+    </footer>
   </body>
 </html>
