--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -8,6 +8,7 @@
   <body>
     <h1><%= campground.title %></h1>
     <h1><%= campground.location %></h1>
+    <a href="/campgrounds/<%=campground._id %>/edit">Edit</a>
     <footer>
       <a href="/campgrounds">All Campgrounds</a>
     </footer>
