--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -9,6 +9,11 @@
     <h1><%= campground.title %></h1>
     <h1><%= campground.location %></h1>
     <a href="/campgrounds/<%=campground._id %>/edit">Edit</a>
+    <p>
+    <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+      <button>Delete</button>
+    </form>
+</p>
     <footer>
       <a href="/campgrounds">All Campgrounds</a>
     </footer>
