--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,8 @@
 <%- layout("layouts/boilerplate") %>
     <h1><%= campground.title %></h1>
     <h1><%= campground.location %></h1>
+    <img src="<%= campground.image %>" alt="">
+    <p><%= campground.description %></p>
     <a href="/campgrounds/<%=campground._id %>/edit">Edit</a>
     <p>
     <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
