--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,17 +13,18 @@
         <li class="list-group-item">Subbmited by <%= campground.author.username %></li>
         <li class="list-group-item">$<%= campground.price %>/night</li>
       </ul>
-      <!-- <% if(currentUser && campground.author.equals(currentUser._id)) {%> -->
+      <% if(currentUser && campground.author.equals(currentUser._id)) {%>
       <div class="card-body">
         <a class="card-link btn btn-info" href="/campgrounds/<%=campground._id %>/edit">Edit</a>
         <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
           <button class="btn btn-danger">Delete</button>
         </form>
       </div>
-      <!-- <% } %> -->
+      <% } %>
     </div>
   </div>
   <div class="col-6">
+    <% if(currentUser) { %>
     <h2>Leave a Review</h2>
     <form class="mb-3 validated-form" action="/campgrounds/<%=campground._id%>/reviews" method="POST" novalidate>
       <div class="mb-3">
@@ -37,14 +38,17 @@
       </div>
       <button class="btn btn-success">Submit</button>
     </form>
-    <% for(let review of campground.reviews) { %>
+    <% } %> <% for(let review of campground.reviews) { %>
     <div class="mb-3 card">
       <div class="card-body">
         <h5 class="card-title">Rating: <%= review.rating %></h5>
+        <h6 class="card-subtitle mb-2 text-body-secondary">By <%= review.author.username %></h6>
         <p class="card-text">Review: <%= review.body %></p>
+        <% if(currentUser && review.author.equals(currentUser._id)) {%>
         <form action="/campgrounds/<%=campground._id %>/reviews/<%=review._id%>?_method=DELETE" method="POST">
           <button class="btn btn-sm btn-danger">Delete Review</button>
         </form>
+        <% } %>
       </div>
     </div>
     <% } %>
