--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,5 +1,5 @@
 <%- layout("layouts/boilerplate") %>
-
+<link rel="stylesheet" href="/stylesheets/star.css" />
 <div class="row">
   <div class="col-6">
     <div class="card mb-3">
@@ -41,8 +41,10 @@
     <% } %> <% for(let review of campground.reviews) { %>
     <div class="mb-3 card">
       <div class="card-body">
-        <h5 class="card-title">Rating: <%= review.rating %></h5>
-        <h6 class="card-subtitle mb-2 text-body-secondary">By <%= review.author.username %></h6>
+        <!-- <h5 class="card-title">Rating: <%= review.rating %></h5> -->
+        <h3>Rated element name</h3>
+        <p class="starability-result" data-rating="<%= review.rating %>">Rated: <%= review.rating %> stars</p>
+        <h6 class="card-subtitle mb-2 text-body-secondary"><%= review.author.username %></h6>
         <p class="card-text">Review: <%= review.body %></p>
         <% if(currentUser && review.author.equals(currentUser._id)) {%>
         <form action="/campgrounds/<%=campground._id %>/reviews/<%=review._id%>?_method=DELETE" method="POST">
