--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -15,10 +15,6 @@
         <div class="valid-feedback">Looks good!!!</div>
       </div>
       <div class="mb-3">
-        <label class="form-label" for="image">Add Images</label>
-        <input type="file" name="image" id="image" multiple />
-      </div>
-      <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
         <div class="input-group">
           <span class="input-group-text" id="price-label">$</span>
@@ -30,6 +26,10 @@
         <label class="form-label" for="description">Description Url</label>
         <textarea class="form-control" type="text" id="description" name="campground[description]" required><%= campground.description %></textarea>
         <div class="valid-feedback">Looks good!!!</div>
+      </div>
+      <div class="mb-3">
+        <label for="formFileMultiple" class="form-label">Add image:</label>
+        <input class="form-control" type="file" id="formFileMultiple" multiple />
       </div>
       <div class="mb-3"><button class="btn btn-info">Update Campground</button></div>
     </form>
