--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -13,7 +13,8 @@
         <input class="form-control" type="text" id="location" name="campground[location]" required />
         <div class="valid-feedback">Looks good!!!</div>
       </div>
-      <input type="file" name="image" id="" multiple />
+
+      <!-- <input type="file" name="image" id="" multiple /> -->
       <!-- <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
         <input class="form-control" type="text" id="image" name="campground[image]" required />
@@ -31,6 +32,10 @@
         <label class="form-label" for="description">Description Url</label>
         <textarea class="form-control" type="text" id="description" name="campground[description]" required></textarea>
         <div class="valid-feedback">Looks good!!!</div>
+      </div>
+      <div class="mb-3">
+        <label for="formFileMultiple" class="form-label">Add image:</label>
+        <input class="form-control" type="file" id="formFileMultiple" multiple />
       </div>
       <div class="mb-3"><button class="btn btn-success">Add Campground</button></div>
     </form>
