--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -31,6 +31,15 @@
         <label for="formFileMultiple" class="form-label">Add image:</label>
         <input class="form-control" type="file" id="formFileMultiple" multiple />
       </div>
+      <div class="mb-3">
+        <% campground.images.forEach(function(img, i) {%>
+        <img src="<%= img.url %>" class="img-thumbnail" alt="" />
+        <div class="form-check-inline">
+          <input type="checkbox" id="image-<%=i%>" name="deleteImages[]" value="<%=img.filename%>" />
+        </div>
+        <label for="image-<%=i%>">Delete?</label>
+        <% }) %>
+      </div>
       <div class="mb-3"><button class="btn btn-info">Update Campground</button></div>
     </form>
     <a href="/campgrounds/<%=campground._id %>">Back To Campgrounds</a>
