--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -9,7 +9,7 @@
   <div class="row">
     <div class="col-md-4">
       <!-- pertvarkyti img? -->
-      <img class="img-fluid" alt="" src="<%= campground.images[0].url %>" />
+      <img class="img-fluid" alt="" src="<%= campground.images%>" />
     </div>
     <div class="col-md-8">
       <div class="card-body">
