--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -15,6 +15,7 @@
     <div class="col-md-8">
       <div class="card-body">
         <h5 class="card-title"><%= campground.title %></h5>
+
         <p class="card-text"><%= campground.description %></p>
         <p class="card-text">
           <small class="text-muted"><%= campground.location %></small>
@@ -26,3 +27,8 @@
 </div>
 
 <% } %>
+<script>
+  const maptilerApiKey = '<%- process.env.MAPTILER_API_KEY %>';
+  const campgrounds = { features: <%- JSON.stringify(campgrounds) %>}
+</script>
+<script src="/javascripts/clusterMap.js"></script>
