--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,14 +1,7 @@
 <%- layout("layouts/boilerplate") %>
 <link rel="stylesheet" href="/stylesheets/star.css" />
-<style>
-  #map {
-    width: 300px;
-    height: 300px;
-
-    top: 0;
-    bottom: 0;
-  }
-</style>
+<link rel="stylesheet" href="/stylesheets/star.css" />
+<link rel="stylesheet" href="/stylesheets/app.css" />
 
 <div class="row">
   <div class="col-6">
